--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- 🧾 Header Section -->
   <section class="tool-header" style="padding-top:3rem;">
-    <img src="./assets/file-icon.svg" alt="TaskHub Icon" class="tool-icon">
+    <img src="./assets/TaskHub.svg" alt="TaskHub Icon" class="tool-icon">
     <div>
       <h1>TaskHub</h1>
       <p class="subtitle">Fast, simple, and useful tools — all in one place.</p>
