--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <!-- Farsi -->
       <div id="hero-fa" dir="rtl" style="display:none;">
-        <h1>همه ابزارهای کاربردی شما در یک‌جا ⚙️</h1>
+        <h1>همه ابزارهای کاربردی شما در یکجا ⚙️</h1>
         <p>تبدیل فایل‌ها، فشرده‌سازی داده‌ها، پاکسازی صفحات گسترده و ابزارهای بیشتر  سریع، امن و رایگان.</p>
       </div>
 
