--- a/tools/zip-unzip.html
+++ b/tools/zip-unzip.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="icon" type="image/png" href="../assets/taskhub-logo.svg" />
 
+  <!-- ✅ Google AdSense Global Script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
+      crossorigin="anonymous"></script>
+
   <!-- JSZip & FileSaver -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
@@ -91,6 +95,13 @@
     .lang-btns button:hover {
       background: #f2f2f2;
     }
+
+    /* Ad styling */
+    .ad-placeholder {
+      text-align: center;
+      margin: 2rem auto;
+      max-width: 800px;
+    }
   </style>
 </head>
 
@@ -130,6 +141,19 @@
     <button onclick="extractFiles()">Extract (Unzip)</button>
 
     <div id="result" class="ad-placeholder"></div>
+
+    <!-- 🧱 Google AdSense Ad Placement -->
+    <div class="ad-placeholder">
+      <ins class="adsbygoogle"
+           style="display:block; text-align:center;"
+           data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+           data-ad-slot="1234567890"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
   </div>
 
   <!-- 🧭 Footer -->
