--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TaskHub | Free Online Tools</title>
-  <meta name="description" content="TaskHub — smart, simple, and fast tools for everyday tasks like file conversion, data cleaning, password generation, and more.">
+  <meta name="description" content="TaskHub: smart, simple, and fast tools for everyday tasks like file conversion, data cleaning, password generation, and more.">
   <link rel="stylesheet" href="./css/style.css" />
-  <link rel="icon" type="image/png" href="./assets/taskhub-logo.png" />
+  <link rel="icon" type="image/png" href="./assets/taskhub-logo.svg" />
 
   <!-- ✅ Google AdSense Global Script -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
@@ -17,7 +17,7 @@
   <!-- 🧭 Navbar -->
   <header class="navbar">
     <div class="nav-left">
-      <img src="./assets/taskhub-logo.png" alt="TaskHub Logo" class="nav-logo" width="36" height="36">
+      <img src="./assets/taskhub-logo.svg" alt="TaskHub Logo" class="nav-logo" width="36" height="36">
       <a href="./index.html" class="brand">TaskHub</a>
     </div>
     <nav>
@@ -31,7 +31,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1>All your Essential Tools in one place ⚙️</h1>
-      <p>Convert files, compress data, clean spreadsheets, and more — instantly, securely, and for free.</p>
+      <p>Convert files, compress data, clean spreadsheets, and more, instantly, securely, and for free.</p>
 
       <!-- ✨ Typing animation tagline -->
       <div class="typing-tagline">
