--- a/tools/file-converter.html
+++ b/tools/file-converter.html
@@ -11,7 +11,10 @@
 <body>
   <!-- 🔝 Navigation -->
   <header class="navbar">
-    <a href="../index.html" class="brand">⚙️ TaskHub</a>
+    <div class="nav-left">
+      <img src="../assets/taskhub-logo.svg" alt="TaskHub Logo" class="nav-logo" width="32" height="32" />
+      <a href="../index.html" class="brand">TaskHub</a>
+    </div>
     <nav>
       <a href="../index.html">Home</a>
       <a href="../privacy.html">Privacy</a>
