added social media tool

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
       <a href="./tools/url-shortener.html" class="tool-card">
         <img src="./assets/link-icon.svg" width="28" alt="URL Shortener Icon"> URL Shortener
       </a>
+      <a href="./tools/social-audit.html" class="tool-card">
+       <img src="./assets/audit-icon.svg" width="28" alt="Social Media Audit Icon"> Social Media Audit
+      </a>
+
     </div>
   </main>
 
@@ -90,6 +94,8 @@
       <a href="./tools/csv-cleaner.html" class="tool-card">📊 پاکسازی داده‌ها</a>
       <a href="./tools/password-generator.html" class="tool-card">🔐 ساخت رمز عبور</a>
       <a href="./tools/url-shortener.html" class="tool-card">🌐 کوتاه‌کننده لینک</a>
+      <a href="./tools/social-audit-fa.html" class="tool-card">🧠 ارزیابی سوشال‌مدی</a>
+
     </div>
   </main>
 
