social media farsi added

--- a/tools/social-audit.html
+++ b/tools/social-audit.html
@@ -435,7 +435,9 @@
     }
 
     // default language
-    document.addEventListener('DOMContentLoaded', () => setLang('en'));
+    //document.addEventListener('DOMContentLoaded', () => setLang('en'));
+    document.addEventListener('DOMContentLoaded', () => setLang('fa'));
+    
   </script>
 </body>
 </html>
