--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <a href="./index.html" class="active">Home</a>
       <a href="./privacy.html">Privacy</a>
       <a href="#">About</a>
+      <a href="./contact.html">Contact</a>
     </nav>
+      
   </header>
 
   <!-- 🌅 Hero Section -->
