contact form added and updated2

--- a/tools/social-audit-fa.html
+++ b/tools/social-audit-fa.html
@@ -54,7 +54,7 @@
       <a href="../index.html">خانه</a>
       <a href="../privacy.html">حریم خصوصی</a>
       <a href="#">درباره ما</a>
-      <a href="./contact.html" class="active">Contact</a>
+      <a href="../contact.html" class="active">Contact</a>
     </nav>
   </header>
 
