--- a/tools/csv-cleaner.html
+++ b/tools/csv-cleaner.html
@@ -20,7 +20,7 @@
       <a href="../index.html">Home</a>
       <a href="../privacy.html">Privacy</a>
       
-      <a href="./contact.html" class="active">Contact</a>
+      <a href="../contact.html" class="active">Contact</a>
     </nav>
   </header>
 
