--- a/tools/password-generator.html
+++ b/tools/password-generator.html
@@ -19,7 +19,7 @@
     <nav>
       <a href="../index.html">Home</a>
       <a href="../privacy.html">Privacy</a>
-      <a href="./contact.html" class="active">Contact</a>
+      <a href="../contact.html" class="active">Contact</a>
     </nav>
   </header>
 
