--- a/tools/social-audit.html
+++ b/tools/social-audit.html
@@ -59,7 +59,7 @@
       <a href="../index.html">Home</a>
       <a href="../privacy.html">Privacy</a>
       <a href="#">About</a>
-      <a href="./contact.html" class="active">Contact</a>
+      <a href="../contact.html" class="active">Contact</a>
     </nav>
   </header>
 
