--- a/tools/url-shortener.html
+++ b/tools/url-shortener.html
@@ -20,7 +20,7 @@
     <nav>
       <a href="../index.html">Home</a>
       <a href="../privacy.html">Privacy</a>
-      <a href="./contact.html" class="active">Contact</a>
+      <a href="../contact.html" class="active">Contact</a>
     </nav>
   </header>
 
