added to new host

--- a/index.html
+++ b/index.html
@@ -8,9 +8,46 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="icon" type="image/png" href="./assets/taskhub-logo.svg" />
 
-  <!-- ✅ Google AdSense Global Script -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
-      crossorigin="anonymous"></script>
+  
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR-ADSENSE-ID"
+     crossorigin="anonymous"></script>
+
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bita Digital Hub</title>
+
+    <!-- ✅ Google Analytics (insert here, near the top of <head>) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
+
+    <!-- your existing SEO, AdSense, and favicon tags below -->
+    <meta name="description" content="Bita Digital Hub – Smart tools for creators.">
+    <link rel="icon" href="./assets/taskhub-logo.png">
+  </head>
+  <body>
+    <!-- page content -->
+  </body>
+  </html>
+
+
+
+  <meta name="description" content="Bita Digital Hub – Smart, simple, and free online tools for digital creators.">
+  <meta name="keywords" content="online tools, digital marketing, task automation, file converter, zip tool">
+  <meta property="og:title" content="Bita Digital Hub – Free Tools for Creators">
+  <meta property="og:description" content="Boost your digital workflow with free tools and resources made for content creators.">
+  <meta property="og:image" content="https://bitadigitalhub.com/assets/taskhub-logo.png">
+  <meta property="og:url" content="https://bitadigitalhub.com">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="icon" href="https://bitadigitalhub.com/assets/taskhub-logo.png">
 </head>
 
 <body>
