--- a/tools/csv-cleaner.html
+++ b/tools/csv-cleaner.html
@@ -7,6 +7,13 @@
   <meta name="description" content="Clean, merge, and deduplicate CSV or Excel files instantly — simple, secure, and free.">
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="icon" type="image/png" href="../assets/taskhub-logo.svg" />
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR-ADSENSE-ID"
+     crossorigin="anonymous"></script>
+  <!-- Google Analytics -->
+  <script src="/analytics.html"></script>
+
 </head>
 
 <body>
@@ -71,6 +78,10 @@
           data-ad-format="auto"
           data-full-width-responsive="true"></ins> -->
     </div>
+
+    <!-- Include Google AdSense -->
+  <script src="/adsense.html"></script>
+
   </main>
 
   <!-- 🧾 Footer -->
