--- a/tools/file-converter.html
+++ b/tools/file-converter.html
@@ -7,6 +7,14 @@
   <meta name="description" content="Convert PDF, Word, Excel, and image files instantly with TaskHub’s free online file converter.">
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="icon" type="image/png" href="../assets/taskhub-logo.svg" />
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR-ADSENSE-ID"
+     crossorigin="anonymous"></script>
+
+    <!-- Google Analytics -->
+  <script src="/analytics.html"></script>
+
 </head>
 
 <body>
@@ -86,6 +94,10 @@
           data-ad-format="auto"
           data-full-width-responsive="true"></ins> -->
     </div>
+
+    <!-- Include Google AdSense -->
+  <script src="/adsense.html"></script>
+
   </main>
 
   <!-- 🧾 Footer -->
