--- a/tools/password-generator.html
+++ b/tools/password-generator.html
@@ -7,6 +7,13 @@
   <meta name="description" content="Generate strong, secure passwords and check password strength instantly — free and online.">
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="icon" type="image/png" href="../assets/taskhub-logo.svg" />
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR-ADSENSE-ID"
+     crossorigin="anonymous"></script>
+
+     <!-- Google Analytics -->
+  <script src="/analytics.html"></script>
 </head>
 
 <body>
