--- a/tools/social-audit-fa.html
+++ b/tools/social-audit-fa.html
@@ -9,8 +9,12 @@
   <link rel="icon" type="image/svg+xml" href="../assets/taskhub-logo.svg" />
 
   <!-- ✅ Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
-          crossorigin="anonymous"></script>
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR-ADSENSE-ID"
+     crossorigin="anonymous"></script>
+
+     <!-- Google Analytics -->
+  <script src="/analytics.html"></script>
 
   <style>
     body { font-family: "Vazirmatn", sans-serif; background:#f8fafc; }
