--- a/tools/social-audit.html
+++ b/tools/social-audit.html
@@ -9,8 +9,12 @@
   <link rel="icon" type="image/svg+xml" href="../assets/taskhub-logo.svg"/>
 
   <!-- ✅ Google AdSense Global Script (replace client id) -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
-          crossorigin="anonymous"></script>
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR-ADSENSE-ID"
+     crossorigin="anonymous"></script>
+
+     <!-- Google Analytics -->
+  <script src="/analytics.html"></script>
 
   <style>
     /* Page-specific polish */
@@ -436,8 +440,8 @@
     }
 
     // default language
-    //document.addEventListener('DOMContentLoaded', () => setLang('en'));
-    document.addEventListener('DOMContentLoaded', () => setLang('fa'));
+    document.addEventListener('DOMContentLoaded', () => setLang('en'));
+    //document.addEventListener('DOMContentLoaded', () => setLang('fa'));
     
   </script>
 </body>
