--- a/tools/zip-unzip.html
+++ b/tools/zip-unzip.html
@@ -9,8 +9,12 @@
   <link rel="icon" type="image/png" href="../assets/taskhub-logo.svg" />
 
   <!-- ✅ Google AdSense Global Script -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
-      crossorigin="anonymous"></script>
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR-ADSENSE-ID"
+     crossorigin="anonymous"></script>
+
+     <!-- Google Analytics -->
+  <script src="/analytics.html"></script>
 
   <!-- JSZip & FileSaver -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
