--- a/tools/url-shortener.html
+++ b/tools/url-shortener.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="icon" type="image/png" href="../assets/taskhub-logo.svg" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR-ADSENSE-ID"
+     crossorigin="anonymous"></script>
+
+     <!-- Google Analytics -->
+  <script src="/analytics.html"></script>
 </head>
 
 <body>
