added contact remove2

--- a/privacy.html
+++ b/privacy.html
@@ -89,7 +89,7 @@
   <!-- 🧾 Footer -->
   <footer>
     <p>© 2025 TaskHub | Built for simplicity & trust.</p>
-    <p><a href="#">Privacy Policy</a> · <a href="#">Terms</a> · <a href="#"><a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a> </a></p>
+    <p><a href="#">Privacy Policy</a> · <a href="#">Terms </a></p>
   </footer>
 </body>
 </html>
