--- a/index.html
+++ b/index.html
@@ -3,51 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TaskHub | Free Online Tools</title>
-  <meta name="description" content="TaskHub: smart, simple, and fast tools for everyday tasks like file conversion, data cleaning, password generation, and more.">
+
+  <!-- 🌐 Title & Description -->
+  <title>Bita Digital Hub | Free Online Tools for Creators</title>
+  <meta name="description" content="Smart, simple, and free online tools for digital creators — convert files, clean data, shorten links, and automate daily tasks.">
+  <meta name="keywords" content="online tools, digital marketing, task automation, file converter, zip tool, csv cleaner, password generator">
+
+  <!-- 🎨 Styles & Favicon -->
   <link rel="stylesheet" href="./css/style.css" />
-  <link rel="icon" type="image/png" href="./assets/taskhub-logo.svg" />
+  <link rel="icon" type="image/png" href="./assets/taskhub-logo.png" />
 
-  
-  <!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3215014361489762"
-     crossorigin="anonymous"></script>
-
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bita Digital Hub</title>
-
-    <!-- ✅ Google Analytics (insert here, near the top of <head>) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YHKWTPXDHC"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-YHKWTPXDHC');
-    </script>
-
-    <!-- your existing SEO, AdSense, and favicon tags below -->
-    <meta name="description" content="Bita Digital Hub – Smart tools for creators.">
-    <link rel="icon" href="./assets/taskhub-logo.png">
-  </head>
-  <body>
-    <!-- page content -->
-  </body>
-  </html>
-
-
-
-  <meta name="description" content="Bita Digital Hub – Smart, simple, and free online tools for digital creators.">
-  <meta name="keywords" content="online tools, digital marketing, task automation, file converter, zip tool">
+  <!-- 🧭 Open Graph (SEO & Sharing) -->
   <meta property="og:title" content="Bita Digital Hub – Free Tools for Creators">
   <meta property="og:description" content="Boost your digital workflow with free tools and resources made for content creators.">
   <meta property="og:image" content="https://bitadigitalhub.com/assets/taskhub-logo.png">
   <meta property="og:url" content="https://bitadigitalhub.com">
   <meta name="twitter:card" content="summary_large_image">
-  <link rel="icon" href="https://bitadigitalhub.com/assets/taskhub-logo.png">
+
+  <!-- 📈 Google Analytics (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YHKWTPXDHC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-YHKWTPXDHC');
+  </script>
+
+  <!-- 💰 Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3215014361489762"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -59,18 +43,17 @@
     </div>
     <nav>
       <a href="./index.html" class="active">Home</a>
-      <a href="./about.html">About </a>
+      <a href="./about.html">About</a>
       <a href="./privacy.html">Privacy</a>
-      <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a> 
+      <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a>
     </nav>
-      
   </header>
 
   <!-- 🌅 Hero Section -->
   <section class="hero">
     <div class="hero-content">
       <h1>All your Essential Tools in one place ⚙️</h1>
-      <p>Convert files, compress data, clean spreadsheets, and more, instantly, securely, and for free.</p>
+      <p>Convert files, compress data, clean spreadsheets, and more — instantly, securely, and for free.</p>
 
       <!-- ✨ Typing animation tagline -->
       <div class="typing-tagline">
@@ -85,11 +68,11 @@
     </div>
   </section>
 
-  <!-- 🧱 Google AdSense Ad (Below Hero) -->
+  <!-- 🧱 AdSense Ad (Below Hero) -->
   <div class="ad-placeholder">
     <ins class="adsbygoogle"
          style="display:block; text-align:center; margin:1rem auto;"
-         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+         data-ad-client="ca-pub-3215014361489762"
          data-ad-slot="1111111111"
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
@@ -118,9 +101,8 @@
         <img src="./assets/link-icon.svg" width="28" alt="URL Shortener Icon"> URL Shortener
       </a>
       <a href="./tools/social-audit.html" class="tool-card">
-       <img src="./assets/audit-icon.svg" width="28" alt="Social Media Audit Icon"> Social Media Audit
+        <img src="./assets/audit-icon.svg" width="28" alt="Social Media Audit Icon"> Social Media Audit
       </a>
-
     </div>
   </main>
 
@@ -133,8 +115,7 @@
       <a href="./tools/csv-cleaner.html" class="tool-card">📊 پاکسازی داده‌ها</a>
       <a href="./tools/password-generator.html" class="tool-card">🔐 ساخت رمز عبور</a>
       <a href="./tools/url-shortener.html" class="tool-card">🌐 کوتاه‌کننده لینک</a>
-      <a href="./tools/social-audit-fa.html" class="tool-card">🧠 ارزیابی سوشال‌مدی</a>
-
+      <a href="./tools/social-audit-fa.html" class="tool-card">🧠 ارزیابی سوشال‌مدیا</a>
     </div>
   </main>
 
@@ -142,7 +123,7 @@
   <div class="ad-placeholder">
     <ins class="adsbygoogle"
          style="display:block; text-align:center; margin:2rem auto;"
-         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+         data-ad-client="ca-pub-3215014361489762"
          data-ad-slot="2222222222"
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
@@ -153,7 +134,11 @@
 
   <!-- 🧭 Footer -->
   <footer>
-    <p><a href="./privacy.html">Privacy Policy</a> © 2025 <strong>TaskHub</strong> — Fast, Simple, Free Tools</p>
+    <p>
+      <a href="./privacy.html">Privacy Policy</a> |
+      © 2025 <strong>Bita Digital Hub</strong> — Smart, Simple, Free Tools |
+      📩 <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a>
+    </p>
   </footer>
 
   <!-- 🌐 Language Switch -->
@@ -165,7 +150,7 @@
     }
   </script>
 
-  <!-- ✨ Typing Animation Script -->
+  <!-- ✨ Typing Animation -->
   <script>
     const words = ["Convert 📄", "Clean 🧹", "Compress 📦", "Create 🔧", "Share 🌐"];
     let i = 0, j = 0, isDeleting = false;
